# diting-core

./: .coverage  .dockerignore  .env  .env.template  .gitignore  Dockerfile.ingest  Makefile  README.md  Untitled  pyproject.toml  requirements-ingest-core.txt  requirements-ingest.txt  requirements-module-a.txt  requirements-scanner-alphalens.txt  requirements-scanner.txt
config/: a_track_position_lifecycle.yaml  classifier_rules.yaml  diting_symbols.txt  industry_fallback.csv  moe_router.yaml  scanner_rules.yaml  signal_layer.yaml  symbol_names.csv  symbol_names.csv.example
diting/: __init__.py  pipeline_io.py  position_lifecycle.py  track.py  universe.py
docs/: ingest-eastmoney-connection.md  ingest-production-stuck-analysis.md  ingest-test-target.md  指定28只股票采集情况与补全建议.md  采集数据与AB模块对照.md
scripts/: analyze_b_module_pass_combinations.py  backfill_industry_from_fallback.py  check_ohlcv_table_consistency.py  check_production_data_report.py  factor_quality_smoke.py  fetch_sector_symbols_and_append.py  golden_scanner_batch.py  init_l1_ohlcv_local.sql  init_l2_a_track_signal_cache.py  init_l2_b_track_candidate_snapshot.py  init_l2_business_profile_tables.py  init_l2_classifier_table.py  init_l2_industry_revenue_summary.py  init_l2_moe_expert_opinion_table.py  init_l2_quant_signal_table.py  init_l2_segment_signal_cache.py  init_l2_symbol_names_table.py  migrate_l2_news_content_scope.py  prune_quant_signal_scan_all.py  query_27_symbols_data.py  query_classifier_output.py  query_full_pipeline_result.py  query_ingest_data_overview.py  query_module_c_output.py  (+19 more)
(+105 files in other folders)
