[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "diting-core"
version = "0.1.0"
description = "Diting 核心包"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PyYAML>=6.0", "pytest>=7.0", "pytest-cov>=4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["diting*"]
